cleaned up overflow issue

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -269,11 +269,9 @@ p
   font-adjust(12px)
 
 .labelEventBody
-  overflow auto
   font-adjust(14px)
 
 .eventTable
-  vertical-align:text-top
   padding-top 5px
   gradient(#F0F0F0, #F0F0F0)
   border-radius(5px)
